# meeting-summarizer

./: .gitignore  .tool-versions  design.md  requirements.md  tasks.md
meeting-summarizer/: .tool-versions  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  whisper_test.md
meeting-summarizer/src/: App.tsx
meeting-summarizer/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
meeting-summarizer/src-tauri/src/: lib.rs  main.rs
meeting-summarizer/src-tauri/src/commands/: file_management.rs  llm.rs  mod.rs  model_downloader.rs  model_management.rs  model_settings.rs  streaming.rs
meeting-summarizer/src-tauri/src/database/: mod.rs
meeting-summarizer/src-tauri/src/errors/: mod.rs
meeting-summarizer/src-tauri/src/models/: mod.rs
meeting-summarizer/src-tauri/src/services/: audio_capture_cpal.rs  audio_capture_mock.rs  audio_capture_real.rs  llm.rs  llm_manager.rs  mod.rs  model_downloader.rs  model_settings.rs  recording.rs  whisper.rs  whisper_local.rs  whisper_mock.rs
meeting-summarizer/src-tauri/tests/: integration_tests.rs  phase4_tests.rs  recording_tests.rs  transcription_validation_tests.rs  transcription_workflow_test.rs  whisper_tests.rs
meeting-summarizer/src/atoms/: llm.ts  recording.ts
meeting-summarizer/src/components/features/: ModelSelectionModal.tsx  ModelStatusIndicator.tsx  RecordingControls.tsx  RecordingsList.tsx  SummarizationPanel.tsx
meeting-summarizer/src/components/layout/: Header.tsx
meeting-summarizer/src/components/ui/: modal.tsx  select.tsx
meeting-summarizer/src/hooks/: useRecordingTimer.ts
meeting-summarizer/src/lib/: utils.ts
meeting-summarizer/src/services/: llm.ts  tauri.ts
meeting-summarizer/src/types/: llm.ts  recording.ts
tools/: whisper_test.rb
tools/samples/: japanese_speech_kyoko.aiff  youtube_komai_comparison_summary.txt  youtube_komai_transcription_cleaned.txt  youtube_komai_transcription_medium.txt  youtube_komai_transcription_small.txt
