[package]
name = "meeting-summarizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meeting_summarizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
# Whisper統合 - ローカル実行（Python whisperライブラリ使用）
reqwest = { version = "0.12", features = ["json", "multipart"] }
hound = "3.5"  # WAV file reading/writing
# Audio recording functionality - macOS native implementation
# coreaudio-rs = "0.11"  # macOS Core Audio bindings (complex API)
# objc = "0.2"  # Objective-C runtime for macOS APIs

# Alternative: Use rodio for simpler audio recording
rodio = "0.18"
cpal = "0.15"  # Enable CPAL for real audio recording

[dev-dependencies]
tempfile = "3.10"  # Temporary files for testing

